Change log for zeit.web
=======================

POSTDEPLOY
----------


3.137.2 (unreleased)
--------------------

- ZON-4550: Fix ligatus positioning

- ZON-4507: Polish news article transparency notice


3.137.1 (2018-04-04)
--------------------

- BUG-889: Change wording of dpa/afp infotext


3.137 (2018-04-04)
------------------

- ZON-4578: Show brandeins parquet teaser images on mobile

- FIX: Handle non-ascii uniqueIds in synthetic image groups


3.136 (2018-04-03)
------------------

- SSL-174: Framebuilder uses https://static.zeit.de instead of ssl.zeit.de-Proxy

- HOTFIX: Introduce community_profile_url for external linking


3.135.2 (2018-04-03)
--------------------

- HOTFIX: Make channel queries work in ranking areas again after typo in TMS-164


3.135.1 (2018-03-29)
--------------------

- FIX: Fix building daterange solr querries


3.135 (2018-03-28)
------------------

- ZON-4464: Consider ze.tt and brandeins kicker logo badges in all teasers

- ZON-4507: Infotext for dpa and afp articles

- ZON-4500: Print styles for ZMO

- ZON-4550: Add ligatus container element to DOM

- ZON-4547: Render liveblog from Varnish when Liveblog API server is down

- ZON-4545: Add new meta tags for ligatus

- BUG-881: Fix overlay-slide buttons in gallery for Firefox ≥ 59


3.134 (2018-03-23)
------------------

- ZON-4495: Webtrekk tracking for Google Optimize A/B tests

- ZON-4496: Use Ligatus as nextread

- TMS-181: Update topicpage CP types to current usage

- FEM-80: Improve accessibility of buzz-box accordion

- BUG-868: Fix bug in bugfix for liveblog header

- FIX: Be defensive about missing uuid for old-style moderation_url

- FIX: Be defensive when parsing mod_date

- FIX: Adjust core.IImage to LazyProxy's adapter behaviour

- FIX: Be defensive about missing jobticker feed setting


3.133 (2018-03-22)
------------------

- TMS-164: Enable search support for Solr and ES backends

- TMS-165: Add support for elasticsearch overview areas
